--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,22 +19,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repo
+      - name: 📥 Checkout Repo
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Setup pnpm
-        run: npm install -g pnpm
+      - name: 🛠️ Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          run_install: false
 
-      - name: Setup Node.js with pnpm
+      - name: 🛠️ Setup Node.js with pnpm
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
           cache: 'pnpm'
 
-      - name: Create Release Note
-        run: |
-          pnpx changelogen@latest gh release
+      - name: 📝 Create Release Note
+        run: pnpx changelogen@latest gh release
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
