--- a/static/data/projects.yml
+++ b/static/data/projects.yml
@@ -1,225 +1,110 @@
 ---
-- name: Background Changer
-  repo: shba007/background-changer
-  category: 'web-app'
-  technologies:
-    languages:
-      - typescript
-    frameworks:
-      - react
-      - tailwindcss
-  createdAt: ''
-  appURL: 'https://shba007.github.io/background-changer/'
-  videoURL:
-  images:
-    # - id: baaf3035-3f75-4759-9072-eb5ca865b0de
-    #   title: Background Changer Screenshot 1
-
-    # - id: 27723f41-31fa-4e62-b69f-529aadf32721
-    #   title: Background Changer Screenshot 2
-
-    # - id: ac90c5e5-81fb-4f66-b304-2cab11fb8140
-    #   title: Background Changer Screenshot 3
-
-- name: Unpsy
-  repo: shba007/unpsy-app
-  category: 'web-app'
-  technologies:
-    languages:
-      - typescript
-      - python
-    frameworks:
-      - nuxt
-      - fastapi
-      - tailwindcss
-  createdAt: '2021-07-20T18:30:00.000Z'
-  appURL: 'https://unpsy.monalisa-bairagi.com'
-  videoURL: 'https://youtu.be/Tu60B-gheNM'
-  images:
-    - id: baaf3035-3f75-4759-9072-eb5ca865b0de
-      title: Unpsy Screenshot 1
-
-    - id: 27723f41-31fa-4e62-b69f-529aadf32721
-      title: Unpsy Screenshot 2
-
-    - id: ac90c5e5-81fb-4f66-b304-2cab11fb8140
-      title: Unpsy Screenshot 3
-
-# - name: BloodLink
-#   repo: shba007/blood-link
-#   category: "web-app"
-#   technologies:
-#     languages:
-#       - typescript
-#     frameworks:
-#       - nuxt
-#       - tailwindcss
-#   createdAt: "2022-02-10T18:30:00Z"
-#   appURL: "https://blood-bank-manager.netlify.app"
-#   videoURL: null
-#   images: null
-
-# - name: Orykit
-#   repo: shba007/orykit
-#   category: "web-app"
-#   technologies:
-#     languages:
-#       - typescript
-#     frameworks:
-#       - nuxt
-#       - tailwindcss
-#   createdAt: "2022-03-24T18:30:00Z"
-#   appURL: "https://orykit-store-test.onrender.com"
-#   videoURL: null
-#   images: null
-
-- name: Biosense
-  repo: shba007/biosense-web # shba007/biosense-ai shba007/biosense-iot
-  category: 'iot'
-  technologies:
-    languages:
-      - typescript
-      - python
-    frameworks:
-      - nextjs
-      - tensorflow
-      - tailwindcss
-  createdAt: '2022-08-02T18:30:00Z'
-  appURL: 'https://biosense.onrender.com'
-  videoURL: 'https://youtu.be/Y8hROrtp948'
-  images:
-    - id: baee7615-e6bb-4a94-a9b0-32167e42bf5c
-      title: Biosense Screenshot 1
-
-    - id: 05d040d2-7ac3-4e27-9bec-6e41b3723f26
-      title: Biosense Screenshot 2
-
-    - id: d9febbb2-84f2-467d-ad8b-17df2c25a30c
-      title: Biosense Screenshot 3
-
-- name: Shirsendu's Portfolio
-  repo: Algostract/portfolio-shirsendu
-  category: 'web-app'
+- name: UnHabit
   technologies:
     languages:
       - typescript
     frameworks:
       - nuxt
       - tailwindcss
-  createdAt: '2023-07-09T18:30:00Z'
-  appURL: 'https://shirsendu-bairagi.dev/'
-  videoURL: null
   images:
-    - id: da26ee05-7d79-4a31-ab38-109466823969
-      title: Shirsendu's Portfolio Screenshot 1
+    - id: 530ab5d6-7a3b-4461-835f-66a91e51d213
+      title: UnHabit Screenshot 1
 
-    - id: 74a6a354-4a26-4e31-99a9-300714e4bc18
-      title: Shirsendu's Portfolio Screenshot 2
-
-    - id: d6e52cbd-f0d8-427a-9fbd-7ac0cd355c3e
-      title: Shirsendu's Portfolio Screenshot 3
-
-- name: Magma
-  repo: shba007/ui-react-magma
-  category: 'ui'
+- name: UnWork
   technologies:
     languages:
       - typescript
     frameworks:
-      - react
-      - tailwindcss
-  createdAt: '2023-07-16T18:30:00Z'
-  appURL: 'https://shba007.github.io/ui-magma/'
-  videoURL: null
-  images:
-    - id: 94ca8b01-4819-4110-94d9-608c917e0dcc
-      title: Magma Screenshot 1
+      - nitro
+  images: null
 
-    - id: 01a21789-34ae-4fb3-a3f9-b4b7040327a3
-      title: Magma Screenshot 2
-
-    - id: fe7855af-6def-4893-b935-db724306ab59
-      title: Magma Screenshot 3
-
-- name: UnAI Web
-  repo: shba007/unai-web
-  category: 'blog'
+- name: NuxTemplate
   technologies:
     languages:
       - typescript
+      - rust
     frameworks:
-      - astro
+      - nuxt
       - tailwindcss
-  createdAt: '2023-07-26T06:57:32Z'
-  appURL: 'https://ai-guide.shirsendu-bairagi.dev'
-  videoURL: null
-  images:
-    - id: d0892d9f-7d75-4fa6-af4d-92e4f17ef9c9
-      title: AI Guide Screenshot 1
+      - tauri
+  images: null
 
-    - id: 01e4f1c4-1a00-4b5d-a7b5-1dc9085e096b
-      title: AI Guide Screenshot 2
-
-    - id: d8f402bc-23fd-4db3-842d-844df885cbab
-      title: AI Guide Screenshot 3
-
-- name: Unstack
-  repo: shba007/unstack
-  category: 'npm-package'
+- name: UnAscii
   technologies:
     languages:
       - typescript
     frameworks:
       - citty
       - unbuild
-  createdAt: '2023-09-11T18:30:00Z'
-  appURL: 'https://www.npmjs.com/package/@shba007/unstack'
-  videoURL: null
   images:
-    - id: d55143bb-022f-48f2-97c4-abd7ab4cb229
-      title: Unstack Screenshot 1
+    - id: 49247d31-4c02-413d-b21d-164a23cf42b4
+      title: UnAscii Screenshot 1
 
-    - id: 890114e4-0eae-4cb7-bd97-8e4760d7dcb1
-      title: Unstack Screenshot 2
+    - id: 345d82da-35f7-4646-8669-b01df0f3ef1a
+      title: UnAscii Screenshot 2
 
-    - id: 18ff828b-6857-4cc6-9ac6-fd6df839da02
-      title: Unstack Screenshot 3
-
-- name: Plant Lens
-  repo: shba007/plant-lens-web # shba007/plant-lens-ai
-  category: 'web-app'
+- name: Affinidi Dataville
   technologies:
     languages:
       - typescript
     frameworks:
       - vue
+      - pixijs
       - tailwindcss
-      - tensorflowjs
-  createdAt: '2023-11-19T18:30:00Z'
-  appURL: 'https://shba007.github.io/plant-lens-web/'
-  videoURL: 'https://youtu.be/EAEfdlfqXQA'
+  images: null
+
+- name: UnChill
+  technologies:
+    languages:
+      - typescript
+    frameworks:
+      - unbuild
+  images: null
+
+- name: UI Magic Portfolio
+  technologies:
+    languages:
+      - typescript
+    frameworks:
+      - nextjs
+      - tailwindcss
   images:
-    - id: 00ae07e6-9b2b-42bd-88a2-747e3a8e840b
-      title: Plant Lens Screenshot 1
+    - id: 745d6357-76a7-41c9-be0f-06915271f2e0
+      title: UI Magic Portfolio Screenshot 1
 
-    - id: eedd17bf-8c58-4ee3-bcff-77fbe35eb9f0
-      title: Plant Lens Screenshot 2
+- name: Background Changer
+  technologies:
+    languages:
+      - typescript
+    frameworks:
+      - react
+      - tailwindcss
+  images: null
 
-    - id: e110e44d-cc59-4708-a6b5-9f45e6536b14
-      title: Plant Lens Screenshot 3
-
-- name: Monalisa's Portfolio
-  repo: Algostract/portfolio-monalisa
-  category: 'web-app'
+- name: Red Cat Pictures
   technologies:
     languages:
       - typescript
     frameworks:
       - nuxt
       - tailwindcss
-  createdAt: '2023-11-22T18:30:00Z'
-  appURL: 'https://monalisa-bairagi.com/'
-  videoURL: null
+  images:
+    - id: b4e5001f-422a-43a4-bef8-d8a88d9ed657
+      title: Red Cat Pictures' Screenshot 1
+
+    - id: 8601d098-b161-4f2a-be9a-5779c299e143
+      title: Red Cat Pictures' Screenshot 2
+
+    - id: 2b92a094-dd6b-4787-9ee2-91897482be5e
+      title: Red Cat Pictures' Screenshot 3
+
+- name: Monalisa's Portfolio
+  technologies:
+    languages:
+      - typescript
+    frameworks:
+      - nuxt
+      - tailwindcss
   images:
     - id: db83e278-2954-46fa-bd02-0fe55d39ce12
       title: Monalisa's Portfolio Screenshot 1
@@ -230,72 +115,169 @@
     - id: 243c668d-aea0-475c-959e-c59a1c973423
       title: Monalisa's Portfolio Screenshot 3
 
-- name: Aratrik's Portfolio
-  repo: Algostract/portfolio-aratrik
-  category: 'web-app'
-  technologies:
-    languages:
-      - typescript
-    frameworks:
-      - nuxt
-      - tailwindcss
-  createdAt: '2023-11-24T18:30:00Z'
-  appURL: 'https://redcatpictures.com/'
-  videoURL: null
-  images:
-    - id: 38aab059-6fa2-43b2-a315-e470f3e78266
-      title: Aratrik's Portfolio Screenshot 1
-
-    - id: 8244a9ac-544b-4d8b-a106-6e778091899e
-      title: Aratrik's Portfolio Screenshot 2
-
-    - id: 2b92a094-dd6b-4787-9ee2-91897482be5e
-      title: Aratrik's Portfolio Screenshot 3
-
-- name: Magic Portfolio
-  repo: shba007/magic-portfolio
-  category: 'ui'
-  technologies:
-    languages:
-      - typescript
-    frameworks:
-      - nextjs
-      - tailwindcss
-  createdAt: '2024-05-22T18:30:00Z'
-  appURL: 'https://shba007.github.io/magic-portfolio/'
-  videoURL: null
-  images: null
-
-- name: Affinidi Dataville
-  repo: shba007/affinidi-dataville
-  category: 'web-game'
+- name: Plant Lens
   technologies:
     languages:
       - typescript
     frameworks:
       - vue
-      - pixijs
       - tailwindcss
-  createdAt: '2024-09-21T18:30:00Z'
-  appURL: 'https://affinidi-dataville.onrender.com'
-  videoURL: null
-  images: null
+      - tensorflowjs
+  images:
+    - id: 00ae07e6-9b2b-42bd-88a2-747e3a8e840b
+      title: Plant Lens Screenshot 1
 
-- name: Unascii
-  repo: shba007/unascii
-  category: 'npm-package'
+    - id: eedd17bf-8c58-4ee3-bcff-77fbe35eb9f0
+      title: Plant Lens Screenshot 2
+
+    - id: e110e44d-cc59-4708-a6b5-9f45e6536b14
+      title: Plant Lens Screenshot 3
+
+- name: UnStack
   technologies:
     languages:
       - typescript
     frameworks:
       - citty
       - unbuild
-  createdAt: '2024-09-21T18:30:00Z'
-  appURL: 'https://www.npmjs.com/package/@shba007/unascii'
-  videoURL: null
   images:
-    - id: 49247d31-4c02-413d-b21d-164a23cf42b4
-      title: Unascii Screenshot 1
+    - id: d55143bb-022f-48f2-97c4-abd7ab4cb229
+      title: UnStack Screenshot 1
 
-    - id: 345d82da-35f7-4646-8669-b01df0f3ef1a
-      title: Unascii Screenshot 2
+    - id: 890114e4-0eae-4cb7-bd97-8e4760d7dcb1
+      title: UnStack Screenshot 2
+
+    - id: 18ff828b-6857-4cc6-9ac6-fd6df839da02
+      title: UnStack Screenshot 3
+
+- name: UI Magma
+  technologies:
+    languages:
+      - typescript
+    frameworks:
+      - react
+      - tailwindcss
+  images:
+    - id: 94ca8b01-4819-4110-94d9-608c917e0dcc
+      title: UI Magma Screenshot 1
+
+    - id: 01a21789-34ae-4fb3-a3f9-b4b7040327a3
+      title: UI Magma Screenshot 2
+
+    - id: fe7855af-6def-4893-b935-db724306ab59
+      title: UI Magma Screenshot 3
+
+- name: UnTest
+  technologies:
+    languages:
+      - typescript
+    frameworks:
+      - nuxt
+      - tailwindcss
+  images: null
+
+- name: Shirsendu's Portfolio
+  technologies:
+    languages:
+      - typescript
+    frameworks:
+      - nuxt
+      - tailwindcss
+  images:
+    - id: da26ee05-7d79-4a31-ab38-109466823969
+      title: Shirsendu's Portfolio Screenshot 1
+
+    - id: 74a6a354-4a26-4e31-99a9-300714e4bc18
+      title: Shirsendu's Portfolio Screenshot 2
+
+    - id: d6e52cbd-f0d8-427a-9fbd-7ac0cd355c3e
+      title: Shirsendu's Portfolio Screenshot 3
+
+- name: UI Podcast
+  technologies:
+    languages:
+      - typescript
+    frameworks:
+      - react
+      - tailwindcss
+  images: null
+
+- name: UnAI
+  technologies:
+    languages:
+      - typescript
+    frameworks:
+      - astro
+      - tailwindcss
+  images:
+    - id: d0892d9f-7d75-4fa6-af4d-92e4f17ef9c9
+      title: AI Guide Screenshot 1
+
+    - id: 01e4f1c4-1a00-4b5d-a7b5-1dc9085e096b
+      title: AI Guide Screenshot 2
+
+    - id: d8f402bc-23fd-4db3-842d-844df885cbab
+      title: AI Guide Screenshot 3
+
+- name: UnAuth
+  technologies:
+    languages:
+      - typescript
+    frameworks:
+      - nitro
+  images: null
+
+- name: Biosense
+  technologies:
+    languages:
+      - typescript
+      - python
+    frameworks:
+      - nextjs
+      - tailwindcss
+      - tensorflow
+  images:
+    - id: baee7615-e6bb-4a94-a9b0-32167e42bf5c
+      title: Biosense Screenshot 1
+
+    - id: 05d040d2-7ac3-4e27-9bec-6e41b3723f26
+      title: Biosense Screenshot 2
+
+    - id: d9febbb2-84f2-467d-ad8b-17df2c25a30c
+      title: Biosense Screenshot 3
+
+- name: UnPsy
+  technologies:
+    languages:
+      - typescript
+      - python
+    frameworks:
+      - nuxt
+      - fastapi
+      - tailwindcss
+  images:
+    - id: baaf3035-3f75-4759-9072-eb5ca865b0de
+      title: UnPsy Screenshot 1
+
+    - id: 27723f41-31fa-4e62-b69f-529aadf32721
+      title: UnPsy Screenshot 2
+
+    - id: ac90c5e5-81fb-4f66-b304-2cab11fb8140
+      title: UnPsy Screenshot 3
+# - name: BloodLink
+#   technologies:
+#     languages:
+#       - typescript
+#     frameworks:
+#       - nuxt
+#       - tailwindcss
+#   images: null
+
+# - name: Orykit
+#   technologies:
+#     languages:
+#       - typescript
+#     frameworks:
+#       - nuxt
+#       - tailwindcss
+#   images: null
