fix: update service name and restore image configuration in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-name: 'portfolio-shirsendu-dev'
+name: 'portfolio-shirsendu'
 services:
   app:
-    # image: 'ghcr.io/algostract/portfolio-shirsendu:latest'
-    build: .
+    image: 'ghcr.io/algostract/portfolio-shirsendu:latest'
+    # build: .
     restart: on-failure:3
     volumes:
       - type: bind
