--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,18 +24,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: 🛠️ Setup pnpm
-        uses: pnpm/action-setup@v4
+      - name: 🛠️ Setup Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          run_install: false
-
-      - name: 🛠️ Setup Node.js with pnpm
-        uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-          cache: 'pnpm'
+          bun-version: latest
 
       - name: 📝 Create Release Note
-        run: pnpx changelogen@latest gh release
+        run: bunx changelogen@latest gh release
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
