--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,13 +37,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up QEMU
+      - name: 🐋 Set up QEMU
         uses: docker/setup-qemu-action@v3
 
-      - name: Set up Docker Buildx
+      - name: 🐋 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Extract Docker metadata
+      - name: 🐋 Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
@@ -55,7 +55,7 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=sha,prefix=sha-,format=short
 
-      - name: Set tags as environment variable
+      - name: 🏷️ Set tags as environment variable
         id: metadata
         run: |
           echo "Setting metadata to env variables"
@@ -64,7 +64,7 @@ jobs:
           echo "buildtime=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.created'] }}" >> $GITHUB_OUTPUT
           echo "version=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}" >> $GITHUB_OUTPUT
 
-      - name: Log in to Github Container Registry
+      - name: 🐋 Log in to Github Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -78,7 +78,7 @@ jobs:
       #     username: ${{ env.USERNAME }}
       #     password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and Upload to Registries
+      - name: ⚙️ Build and Upload to Registries
         id: push
         uses: docker/build-push-action@v6
         with:
@@ -92,7 +92,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Generate artifact attestation
+      - name: 📝 Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         with:
           subject-name: ghcr.io/${{ env.REPO }}
@@ -104,7 +104,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Deploy to VPS
+      - name: 🔀 Deploy to VPS
         uses: appleboy/ssh-action@v1.1.0
         with:
           host: ${{ secrets.VPS_HOST }}
