--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
   },
   "type": "module",
   "private": true,
-  "volta": {
-    "node": "22.14.0"
-  },
   "engines": {
     "node": "^20.15.0 || ^22.11.0",
-    "pnpm": "^9.15.0 || ^10.2.0"
+    "pnpm": "^9.15.0 || ^10.2.0",
+    "bun": "^1.2.9"
   },
-  "packageManager": "pnpm@10.8.1",
+  "packageManager": "bun@1.2.10",
   "scripts": {
     "prepare": "husky || true",
     "postinstall": "nuxt prepare",
@@ -64,7 +62,7 @@
     "@vueuse/nuxt": "^13.1.0",
     "confbox": "^0.2.2",
     "date-fns": "^4.1.0",
-    "eslint": "^9.25.0",
+    "eslint": "^9.25.1",
     "nuxt": "^3.16.2",
     "nuxt-nodemailer": "^1.1.2",
     "nuxt-splide": "^1.1.1",
@@ -87,14 +85,10 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.8.3",
     "untun": "^0.1.3",
-    "vitest": "^3.1.1"
+    "vitest": "^3.1.2"
   },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "@parcel/watcher",
-      "better-sqlite3",
-      "esbuild",
-      "sharp"
-    ]
-  }
+  "trustedDependencies": [
+    "@parcel/watcher",
+    "unrs-resolver"
+  ]
 }
