--- a/static/data/projects.yml
+++ b/static/data/projects.yml
@@ -37,11 +37,14 @@
       - citty
       - unbuild
   images:
-    - id: 49247d31-4c02-413d-b21d-164a23cf42b4
+    - id: 0833472d-0d43-4fbd-b5b3-c939c891e940
       title: UnAscii Screenshot 1
 
-    - id: 345d82da-35f7-4646-8669-b01df0f3ef1a
+    - id: fe5ead12-548c-42b0-8b0f-f1a7b9893dd4
       title: UnAscii Screenshot 2
+
+    - id: b0460489-71ae-474e-b252-8602ff792a10
+      title: UnAscii Screenshot 3
 
 - name: Affinidi Dataville
   technologies:
@@ -95,7 +98,7 @@
     - id: 8601d098-b161-4f2a-be9a-5779c299e143
       title: Red Cat Pictures' Screenshot 2
 
-    - id: 2b92a094-dd6b-4787-9ee2-91897482be5e
+    - id: cd3ab101-0bf5-456f-9ef7-140d73fe079b
       title: Red Cat Pictures' Screenshot 3
 
 - name: Monalisa's Portfolio
