--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NODE_ENV=production
-NUXT_PUBLIC_API_BASE_URL=
+NUXT_PUBLIC_SITE_URL=
 NUXT_PUBLIC_SCRIPTS_GOOGLE_ANALYTICS_ID=
 NUXT_PRIVATE_GMAIL=
 NUXT_PRIVATE_DMAIL=
