--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "pnpm": "^9.15.0 || ^10.2.0",
     "bun": "^1.2.9"
   },
-  "packageManager": "bun@1.2.13",
+  "packageManager": "bun@1.2.14",
   "scripts": {
     "prepare": "husky || true",
     "postinstall": "nuxt prepare",
@@ -39,37 +39,39 @@
     "tauri:build:mobile": "tauri android build"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "^1.44.0",
-    "@notionhq/client": "^2.3.0",
-    "@nuxt/eslint": "^1.3.1",
-    "@nuxt/fonts": "^0.11.3",
-    "@nuxt/icon": "^1.12.0",
+    "@dotenvx/dotenvx": "^1.44.1",
+    "@notionhq/client": "^3.1.3",
+    "@nuxt/eslint": "^1.4.1",
+    "@nuxt/fonts": "^0.11.4",
+    "@nuxt/icon": "^1.13.0",
     "@nuxt/image": "^1.10.0",
     "@nuxt/scripts": "0.11.5",
-    "@nuxt/test-utils": "^3.18.0",
+    "@nuxt/test-utils": "^3.19.1",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/i18n": "^9.5.4",
     "@nuxtjs/seo": "^3.0.3",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@splidejs/splide-extension-grid": "^0.4.1",
     "@tauri-apps/api": "^2.5.0",
-    "@unhead/vue": "^2.0.8",
-    "@vite-pwa/nuxt": "^1.0.0",
+    "@unhead/vue": "^2.0.10",
+    "@vite-pwa/nuxt": "^1.0.1",
     "@vitejs/plugin-vue": "^5.2.4",
     "@vue-email/components": "^0.0.21",
     "@vue-email/render": "^0.0.9",
-    "@vueuse/core": "^13.1.0",
-    "@vueuse/nuxt": "^13.1.0",
+    "@vueuse/core": "^13.3.0",
+    "@vueuse/nuxt": "^13.3.0",
     "confbox": "^0.2.2",
     "date-fns": "^4.1.0",
-    "eslint": "^9.26.0",
-    "nuxt": "^3.17.3",
+    "eslint": "^9.27.0",
+    "nuxt": "^3.17.4",
     "nuxt-nodemailer": "^1.1.2",
     "nuxt-splide": "^1.1.1",
     "vee-validate": "^4.15.0",
     "vue": "latest",
     "vue-router": "latest",
-    "zod": "^3.24.4"
+    "web-push": "^3.6.7",
+    "whatsapp-web.js": "^1.28.0",
+    "zod": "^3.25.32"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
@@ -77,17 +79,19 @@
     "@tauri-apps/cli": "^2.5.0",
     "@types/k6": "^1.0.2",
     "@vue/test-utils": "^2.4.6",
-    "happy-dom": "^17.4.7",
+    "happy-dom": "^17.5.6",
     "husky": "^9.1.7",
     "playwright-core": "^1.52.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.8.3",
     "untun": "^0.1.3",
-    "vitest": "^3.1.3"
+    "vitest": "^3.1.4"
   },
   "trustedDependencies": [
     "@parcel/watcher",
+    "esbuild",
+    "sharp",
     "unrs-resolver"
   ]
 }
