feat: add zod schema validation, added whatsapp bot

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 NODE_ENV=production
 
+NOTION_API_KEY=
+
 NUXT_PUBLIC_SITE_URL=
 NUXT_PUBLIC_SCRIPTS_GOOGLE_ANALYTICS_ID=
 
 NUXT_PRIVATE_GMAIL=
 NUXT_PRIVATE_DMAIL=
 
-NUXT_PRIVATE_NOTION_API_KEY=
 NUXT_PRIVATE_NOTION_DB_ID=
