--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,24 @@ services:
     restart: on-failure:3
     volumes:
       - portfolio-shirsendu_static:/app/static
+      - portfolio-shirsendu_data:/app/.data
     env_file:
       - .env.prod
     ports:
       - 4100:3000
+  browserless:
+    image: ghcr.io/browserless/chromium:latest
+    restart: on-failure:3
+    user: root
+    volumes:
+      - portfolio-shirsendu_data:/usr/src/app/user-data-dir
+    environment:
+      - CORS=true
+    ports:
+      - 1201:3000
 
 volumes:
   portfolio-shirsendu_static:
+    external: true
+  portfolio-shirsendu_data:
     external: true
