--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "pnpm": "^9.15.0 || ^10.2.0",
     "bun": "^1.2.9"
   },
-  "packageManager": "bun@1.2.14",
+  "packageManager": "bun@1.2.15",
   "scripts": {
     "prepare": "husky || true",
     "postinstall": "nuxt prepare",
@@ -48,13 +48,14 @@
     "@nuxt/scripts": "0.11.5",
     "@nuxt/test-utils": "^3.19.1",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@nuxtjs/i18n": "^9.5.4",
+    "@nuxtjs/i18n": "^9.5.5",
     "@nuxtjs/seo": "^3.0.3",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@splidejs/splide-extension-grid": "^0.4.1",
     "@tauri-apps/api": "^2.5.0",
+    "@types/web-push": "^3.6.4",
     "@unhead/vue": "^2.0.10",
-    "@vite-pwa/nuxt": "^1.0.1",
+    "@vite-pwa/nuxt": "^1.0.4",
     "@vitejs/plugin-vue": "^5.2.4",
     "@vue-email/components": "^0.0.21",
     "@vue-email/render": "^0.0.9",
@@ -62,16 +63,16 @@
     "@vueuse/nuxt": "^13.3.0",
     "confbox": "^0.2.2",
     "date-fns": "^4.1.0",
-    "eslint": "^9.27.0",
-    "nuxt": "^3.17.4",
+    "eslint": "^9.28.0",
+    "nuxt": "^3.17.5",
     "nuxt-nodemailer": "^1.1.2",
     "nuxt-splide": "^1.1.1",
-    "vee-validate": "^4.15.0",
+    "vee-validate": "^4.15.1",
     "vue": "latest",
     "vue-router": "latest",
     "web-push": "^3.6.7",
-    "whatsapp-web.js": "^1.28.0",
-    "zod": "^3.25.32"
+    "whatsapp-web.js": "^1.30.0",
+    "zod": "^3.25.56"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
@@ -79,18 +80,19 @@
     "@tauri-apps/cli": "^2.5.0",
     "@types/k6": "^1.0.2",
     "@vue/test-utils": "^2.4.6",
-    "happy-dom": "^17.5.6",
+    "happy-dom": "^17.6.3",
     "husky": "^9.1.7",
     "playwright-core": "^1.52.0",
     "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
+    "prettier-plugin-tailwindcss": "^0.6.12",
     "typescript": "^5.8.3",
     "untun": "^0.1.3",
-    "vitest": "^3.1.4"
+    "vitest": "^3.2.2"
   },
   "trustedDependencies": [
     "@parcel/watcher",
     "esbuild",
+    "puppeteer",
     "sharp",
     "unrs-resolver"
   ]
