--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - .env.prod
     ports:
       - 4100:3000
+    depends_on:
+      - browserless
   browserless:
     image: ghcr.io/browserless/chromium:latest
     restart: on-failure:3
