--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,6 @@ env:
   REPO: ${{ github.repository }}
   USERNAME: ${{ vars.USERNAME }}
   VERSION: ${{ github.ref_name }}
-  SITE_URL: ${{ vars.SITE_URL }}
 
 jobs:
   build-web:
@@ -90,7 +89,7 @@ jobs:
           build-args: |
             VERSION=${{ steps.metadata.outputs.version }}
             BUILD_TIME=${{ steps.metadata.outputs.buildtime }}
-            SITE_URL=${{ env.SITE_URL }}
+            SITE_URL=${{ vars.SITE_URL }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -228,9 +227,9 @@ jobs:
       - name: Setup Android Signing
         run: |
           cd src-tauri/gen/android
-          echo "keyAlias=${{ secrets.ANDROID_KEY_ALIAS }}" > keystore.properties
-          echo "password=${{ secrets.ANDROID_KEY_PASSWORD }}" > keystore.properties
-          base64 -d <<< "${{ secrets.ANDROID_KEY_BASE64 }}" > ./upload-keystore.jks
+          echo "keyAlias=${ANDROID_KEY_ALIAS}" > keystore.properties
+          echo "password=${ANDROID_KEY_PASSWORD}" >> keystore.properties
+          base64 -d <<< "${ANDROID_KEY_BASE64}" > ./upload-keystore.jks
           echo "storeFile=../upload-keystore.jks" >> keystore.properties
 
       - name: 🛠️ Setup Rust
