fix: replace $fetch to $api

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint": "eslint . --fix",
     "format": "prettier . --write",
     "test:load": "k6 run tests/load.test.ts",
-    "build": "nuxt build && cp -r static .output/static",
+    "build": "nuxt build && (cp -r static .output/static || true)",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "start": "node --env-file=.env.prod .output/server/index.mjs",
@@ -63,7 +63,7 @@
     "confbox": "^0.2.2",
     "date-fns": "^4.1.0",
     "eslint": "^9.31.0",
-    "nuxt": "^3.17.6",
+    "nuxt": "^3.17.7",
     "nuxt-nodemailer": "^1.1.2",
     "nuxt-splide": "^1.1.1",
     "vee-validate": "^4.15.1",
