feat: add auto mailing with custom mail id

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,19 @@ NODE_ENV=production
 BROWSER_ENDPOINT=
 NOTION_API_KEY=
 
+NUXT_NODEMAILER_FROM=
+NUXT_NODEMAILER_HOST=
+NUXT_NODEMAILER_PORT=
+NUXT_NODEMAILER_AUTH_USER=
+NUXT_NODEMAILER_AUTH_PASS=
+
 NUXT_PUBLIC_SITE_URL=
 NUXT_PUBLIC_SCRIPTS_GOOGLE_ANALYTICS_ID=
 
-NUXT_PRIVATE_GMAIL=
-NUXT_PRIVATE_DMAIL=
+NUXT_PUBLIC_VAPID_KEY=
 
+NUXT_PRIVATE_SERVER_VALIDATION_KEY=
 NUXT_PRIVATE_NOTION_DB_ID=
+
+NUXT_PRIVATE_VAPID_KEY=
+NUXT_PRIVATE_VAPID_SUBJECT=mailto:shirsendu2001@gmail.com
