--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,6 @@ concurrency:
 
 env:
   REPO: ${{ github.repository }}
-  USERNAME: ${{ vars.USERNAME }}
   VERSION: ${{ github.ref_name }}
 
 jobs:
@@ -68,14 +67,14 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ env.USERNAME }}
+          username: ${{ vars.USERNAME }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       # - name: Log in to DockerHub
       #   uses: docker/login-action@v3
       #   with:
       #     registry: docker.io
-      #     username: ${{ env.USERNAME }}
+      #     username: ${{ vars.USERNAME }}
       #     password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: ⚙️ Build and Upload to Registries
