--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.21.7",
   "description": "Shirsendu's devfolio showcasing his projects, experience and certification in a visually appealing manner",
   "author": "Shirsendu Bairagi <shirsendu2001@gmail.com>",
-  "license": "LGPL-3.0-or-later",
+  "license": "GPL-3.0-only",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Algostract/portfolio-shirsendu.git"
+    "url": "git+https://github.com/Algostract/portfolio-shirsendu.git"
   },
   "type": "module",
   "private": true,
@@ -15,7 +15,7 @@
     "pnpm": "^9.15.0 || ^10.2.0",
     "bun": "^1.2.9"
   },
-  "packageManager": "bun@1.2.18",
+  "packageManager": "bun@1.2.19",
   "scripts": {
     "prepare": "husky || true",
     "postinstall": "nuxt prepare",
@@ -38,31 +38,30 @@
     "tauri:build:mobile": "tauri android build"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "^1.47.5",
-    "@notionhq/client": "^3.1.3",
-    "@nuxt/eslint": "^1.5.2",
+    "@dotenvx/dotenvx": "^1.48.3",
+    "@notionhq/client": "^4.0.1",
+    "@nuxt/eslint": "^1.7.1",
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "^1.15.0",
     "@nuxt/image": "^1.10.0",
     "@nuxt/scripts": "0.11.5",
     "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@nuxtjs/i18n": "^9.5.6",
     "@nuxtjs/seo": "^3.1.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@splidejs/splide-extension-grid": "^0.4.1",
-    "@tauri-apps/api": "^2.6.0",
+    "@tauri-apps/api": "^2.7.0",
     "@types/web-push": "^3.6.4",
     "@unhead/vue": "^2.0.12",
     "@vite-pwa/nuxt": "^1.0.4",
-    "@vitejs/plugin-vue": "^6.0.0",
+    "@vitejs/plugin-vue": "^6.0.1",
     "@vue-email/components": "^0.0.21",
     "@vue-email/render": "^0.0.9",
     "@vueuse/core": "^13.5.0",
     "@vueuse/nuxt": "^13.5.0",
     "confbox": "^0.2.2",
     "date-fns": "^4.1.0",
-    "eslint": "^9.31.0",
+    "eslint": "^9.32.0",
     "nuxt": "^3.17.7",
     "nuxt-nodemailer": "^1.1.2",
     "nuxt-splide": "^1.1.1",
@@ -70,12 +69,12 @@
     "vue": "latest",
     "vue-router": "latest",
     "web-push": "^3.6.7",
-    "zod": "^3.25.76"
+    "zod": "^4.0.10"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@tauri-apps/cli": "^2.6.2",
+    "@tauri-apps/cli": "^2.7.1",
     "@types/k6": "^1.1.1",
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^18.0.1",
