chore(deps): update dependencies to latest versions

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,6 @@ NODE_ENV=production
 BROWSER_ENDPOINT=
 NOTION_API_KEY=
 
-NUXT_NODEMAILER_FROM=
 NUXT_NODEMAILER_HOST=
 NUXT_NODEMAILER_PORT=
 NUXT_NODEMAILER_AUTH_USER=
@@ -17,4 +16,4 @@ NUXT_PRIVATE_SERVER_VALIDATION_KEY=
 NUXT_PRIVATE_NOTION_DB_ID=
 
 NUXT_PRIVATE_VAPID_KEY=
-NUXT_PRIVATE_VAPID_SUBJECT=mailto:shirsendu2001@gmail.com
+NUXT_PRIVATE_VAPID_SUBJECT=
