--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "tauri:build:mobile": "tauri android build"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "^1.48.3",
+    "@dotenvx/dotenvx": "^1.48.4",
     "@notionhq/client": "^4.0.1",
     "@nuxt/eslint": "^1.7.1",
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "^1.15.0",
-    "@nuxt/image": "^1.10.0",
+    "@nuxt/image": "^1.11.0",
     "@nuxt/scripts": "0.11.5",
     "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/color-mode": "^3.5.2",
@@ -52,24 +52,24 @@
     "@splidejs/splide-extension-grid": "^0.4.1",
     "@tauri-apps/api": "^2.7.0",
     "@types/web-push": "^3.6.4",
-    "@unhead/vue": "^2.0.12",
+    "@unhead/vue": "^2.0.13",
     "@vite-pwa/nuxt": "^1.0.4",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue-email/components": "^0.0.21",
     "@vue-email/render": "^0.0.9",
-    "@vueuse/core": "^13.5.0",
-    "@vueuse/nuxt": "^13.5.0",
+    "@vueuse/core": "^13.6.0",
+    "@vueuse/nuxt": "^13.6.0",
     "confbox": "^0.2.2",
     "date-fns": "^4.1.0",
     "eslint": "^9.32.0",
-    "nuxt": "^3.17.7",
+    "nuxt": "^3.18.0",
     "nuxt-nodemailer": "^1.1.2",
-    "nuxt-splide": "^1.1.1",
+    "nuxt-splide": "^1.1.2",
     "vee-validate": "^4.15.1",
     "vue": "latest",
     "vue-router": "latest",
     "web-push": "^3.6.7",
-    "zod": "^4.0.10"
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
@@ -79,10 +79,10 @@
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^18.0.1",
     "husky": "^9.1.7",
-    "playwright-core": "^1.54.1",
+    "playwright-core": "^1.54.2",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "typescript": "^5.8.3",
+    "typescript": "~5.8.3",
     "vitest": "^3.2.4"
   },
   "trustedDependencies": [
