--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "pnpm": "^9.15.0 || ^10.2.0",
     "bun": "^1.2.9"
   },
-  "packageManager": "bun@1.2.19",
+  "packageManager": "bun@1.2.21",
   "scripts": {
     "prepare": "husky || true",
     "postinstall": "nuxt prepare",
@@ -38,48 +38,49 @@
     "tauri:build:mobile": "tauri android build"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "^1.48.4",
+    "@dotenvx/dotenvx": "^1.49.0",
+    "@hannoeru/nuxt-otel": "0.0.6",
     "@notionhq/client": "^4.0.1",
-    "@nuxt/eslint": "^1.7.1",
+    "@nuxt/eslint": "^1.9.0",
     "@nuxt/fonts": "^0.11.4",
-    "@nuxt/icon": "^1.15.0",
+    "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "^1.11.0",
     "@nuxt/scripts": "0.11.5",
     "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/seo": "^3.1.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@regle/nuxt": "1.8.0",
     "@splidejs/splide-extension-grid": "^0.4.1",
-    "@tauri-apps/api": "^2.7.0",
+    "@tauri-apps/api": "^2.8.0",
     "@types/web-push": "^3.6.4",
-    "@unhead/vue": "^2.0.13",
+    "@unhead/vue": "^2.0.14",
     "@vite-pwa/nuxt": "^1.0.4",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue-email/components": "^0.0.21",
     "@vue-email/render": "^0.0.9",
-    "@vueuse/core": "^13.6.0",
-    "@vueuse/nuxt": "^13.6.0",
+    "@vueuse/core": "^13.9.0",
+    "@vueuse/nuxt": "^13.9.0",
     "confbox": "^0.2.2",
     "date-fns": "^4.1.0",
-    "eslint": "^9.32.0",
-    "nuxt": "^3.18.0",
+    "eslint": "^9.35.0",
+    "nuxt": "^4.1.1",
     "nuxt-nodemailer": "^1.1.2",
     "nuxt-splide": "^1.1.2",
-    "vee-validate": "^4.15.1",
     "vue": "latest",
     "vue-router": "latest",
     "web-push": "^3.6.7",
-    "zod": "^4.0.14"
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@tauri-apps/cli": "^2.7.1",
-    "@types/k6": "^1.1.1",
+    "@tauri-apps/cli": "^2.8.4",
+    "@types/k6": "^1.2.0",
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^18.0.1",
     "husky": "^9.1.7",
-    "playwright-core": "^1.54.2",
+    "playwright-core": "^1.55.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "~5.8.3",
